# vmabs

./: meson.build  org.example.App.json
data/: org.example.App.desktop.in  org.example.App.gschema.xml
po/: POTFILES  meson.build
src/: # Vmabs Login Application.md  application.vala  datadiri.vala  homepage.ui  homepage.vala  login.css  main.vala  meson.build  register.ui  register.vala  vmabs.gresource.xml  window.ui  window.vala
